--- a/views/admin/incidents-create.pug
+++ b/views/admin/incidents-create.pug
@@ -77,9 +77,9 @@ block admin-content
 					label.label= t('admin.incidents.content')
 					textarea#incident-editor
 				section.form-footer
-					button.btn.btn-green#admin-incidents-save
+					button.button.is-green#admin-incidents-save
 						span
-							i.fa.fa-check
+							i.icon-check
 							= t('admin.incidents.save')
 	else
 		.admin-box
