--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -1,8 +1,12 @@
-header
-	.logo
-		span= t('systemstatus')
-		a(href='/'): img(src='/images/logo.png',alt="Logo")
-		div
-			i#notifload
-			block navright
+nav.nav.stickyscroll#header
+	.nav-left
+		a.nav-item(href='/')
+			h1
+				i.icon-circle-check
+				= t('systemstatus')
+	.nav-center
+		a.nav-item(href='/'): img(src='/images/logo.png',alt="Logo")
+	.nav-right
+		i.nav-item#notifload
+		block navright
 	block header
